refactor: 优化MappingSyncService中的动漫同步逻辑，采用渐进式同步策略并更新测试用例